Feat: adding reset password routes
